manifests/vmgather.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vmgather
  labels:
    app: vmgather
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vmgather
  template:
    metadata:
      labels:
        app: vmgather
    spec:
      containers:
        - name: vmgather
          image: quay.io/victoriametrics/vmgather:v1.11.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 5
          resources:
            requests:
              cpu: 1
              memory: "64Mi"
            limits:
              cpu: 2
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: vmgather
  labels:
    app: vmgather
spec:
  type: ClusterIP
  selector:
    app: vmgather
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
